Allow nullable evidence attributes in StavIA prompts